--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,17 @@ spring.application.name=EmployeeManagementSystem
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/Ems
-spring.datasource.username=root
-spring.datasource.password=sufiyan
+# Replace with your Free SQL Database details
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12785534
+spring.datasource.username=sql12785534
+spring.datasource.password=Cv4yF6iLbg
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
 
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
+# JPA & Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # ===============================
 # = SECURITY
 # ===============================
