--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 	</dependencies>
 
 	<build>
-	<finalName>Ems application</finalName>
+    <finalName>ems-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
