--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,14 @@ spring.application.name=EmployeeManagementSystem
 # ===============================
 # = DATA SOURCE
 # ===============================
-# Replace with your Free SQL Database details
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12785534
-spring.datasource.username=sql12785534
-spring.datasource.password=Cv4yF6iLbg
+spring.datasource.url=mysql://root:ZHxXKurySqVzWMKWEBMaBRRCbtszpCbm@ballast.proxy.rlwy.net:43274/railway
+spring.datasource.username=root
+spring.datasource.password=ZHxXKurySqVzWMKWEBMaBRRCbtszpCbm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
