--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,16 @@ spring.application.name=EmployeeManagementSystem
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=mysql://root:ZHxXKurySqVzWMKWEBMaBRRCbtszpCbm@ballast.proxy.rlwy.net:43274/railway
+spring.datasource.url=jdbc:mysql://interchange.proxy.rlwy.net:24125/railway
 spring.datasource.username=root
-spring.datasource.password=ZHxXKurySqVzWMKWEBMaBRRCbtszpCbm
+spring.datasource.password=zvsBypqdJLeKyuNCGmNeSoLwsdQLswhr
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
 
 # ===============================
 # = SECURITY
